--- a/iframe内联框架.html
+++ b/iframe内联框架.html
@@ -7,6 +7,7 @@
     <title>iframe内联框架</title>
 </head>
 <body>
+<h1>你好世界</h1>
     <iframe name="mainFrame" src="../学习案例/html5的结构元素.html" />
     <hr />
     <a href="../学习案例/html5的结构元素.html" target="mainFrame">下边展示第二页</a>
